--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,33 @@
+#spring.mvc.view.prefix=/views/
+#spring.mvc.view.suffix=.jsp
+#spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+#spring.datasource.url= jdbc:mysql://localhost:3306/gurukulboot
+#spring.datasource.username= root
+#spring.datasource.password= root
+#spring.jpa.show-sql= true
+#spring.jpa.ddl-auto = update
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#server.port=5000
+# View Resolver Configuration (No Change)
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
-spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/gurukulboot
-spring.datasource.username= root
-spring.datasource.password= root
-spring.jpa.show-sql= true
-spring.jpa.ddl-auto = update
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+# H2 Database Configuration
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:gurukulboot
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA Configuration for H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+# H2 Console (Optional: Enable Web UI)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Server Configuration (No Change)
 server.port=5000
